# Chimera

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/chimera/: AsyncIO.hpp  BehavioralMimicry.hpp  Transport.hpp  base64.hpp  client.hpp  common.hpp  config_wizard.hpp  crypto.hpp  dns_packet.hpp  steganography.hpp  system_diagnostics.hpp
src/: AsyncIO.cpp  BehavioralMimicry.cpp  Transport.cpp  client.cpp  config_wizard.cpp  crypto.cpp  dns_packet.cpp  main.cpp  steganography.cpp  system_diagnostics.cpp
tests/: test_basic.cpp  test_comprehensive.cpp  test_unified.cpp
wiki/: API-Reference.md  Advanced-Features.md  Basic-Usage.md  Configuration-Wizard.md  Configuration.md  Contributing.md  Examples.md  FAQ.md  Getting-Started.md  Home.md  Security.md  System-Diagnostics.md  Troubleshooting.md
